Merge MrLavender's URL encoding fix